vendor/glib/tests/subclass_compiletest/03-object-no-auto-send-sync.rs
fn main() {
    fn check<T: Send + Sync>(_obj: &T) {}

    let obj = glib::Object::new::<glib::Object>();
    check(&obj);
}
